--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
     "eslint-config-typescript": "^3.0.0",
+    "jest": "^25.5.4",
+    "ts-jest": "^25.3.1",
     "ts-node": "^8.7.0",
     "tsconfig-paths": "^3.9.0",
     "tslib": "1.11.2",
