Remove import absolute paths
Typescript imports files relative to the project, it does not load the
sub module tsconfig files so  it is able to know the aliases used in
the libraries, therefore, using relative paths in imports is the best
solution for the moment.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,7 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "build",
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "paths": {
-      "@index": ["index.ts"],
-      "@environment": ["Environment.ts"],
-      "@providers/*": ["src/providers/*"],
-      "@utils/*": ["src/utils/*"]
-    }
+    "moduleResolution": "node"
   },
   "plugins": [
     "@typescript-eslint"
